Use full module names. Change restart to use pm2 which works for docker and standard installs.

--- a/tasks/copy_files.yml
+++ b/tasks/copy_files.yml
@@ -1,6 +1,6 @@
 ---
 
 - name: "Copy files for {{ item.name }}"
-  copy:
+  ansible.builtin.copy:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
