--- a/tasks/install_magic_mirror.yml
+++ b/tasks/install_magic_mirror.yml
@@ -8,7 +8,7 @@
       NODE_MAJOR=20
       echo "deb [signed-by=/usr/share/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
       sudo apt update
-      sudo apt install nodejs
+      sudo apt install nodejs --yes
   tags:
   - install
 
